# DocPilot

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260410_0001_create_documents_table.py
backend/app/: main.py
backend/app/api/v1/: documents.py
backend/app/core/: config.py  db.py
backend/app/models/: __init__.py  document.py
backend/app/schemas/: __init__.py  document.py
backend/app/services/: __init__.py  documents.py
backend/tests/: conftest.py  test_documents.py  test_health.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/documents/: page.tsx
frontend/src/app/documents/[id]/: page.tsx
frontend/src/app/upload/: page.tsx
frontend/src/components/: document-detail-view.tsx
frontend/src/lib/: api.ts
frontend/src/types/: index.ts
