[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docpilot-backend"
version = "0.1.0"
description = "Minimal FastAPI backend scaffold for DocPilot"
requires-python = ">=3.13"
dependencies = [
  "alembic>=1.14.0",
  "fastapi>=0.115.0",
  "python-multipart>=0.0.18",
  "psycopg[binary]>=3.2.0",
  "pydantic-settings>=2.6.0",
  "sqlalchemy>=2.0.36",
  "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.0",
  "pytest>=8.3.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
addopts = "--basetemp=.pytest_tmp"
pythonpath = ["."]
testpaths = ["tests"]
